[package]
name = "rspoa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.5", features = ["derive"] }
project-root = "0.2.2"
gfa = "0.8.0"
handlegraph = "0.5.0"
bit-vec = "0.6"
bitvec = "1"
[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "rspoa_benchmark"
harness = false