[package]
name = "recgraph"
version = "1.0.0"
authors = ["Davide Monti <d.monti11@campus.unimib.it>"]
description = "An exact sequence-to-graph aligner with controlled recombinations"
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
clap = { version = "3.1.5", features = ["derive"] }
project-root = "0.2.2"
gfa = "0.8.0"
handlegraph = "0.5.0"
bit-vec = "0.6"
bitvec = "1"
pbr = "*"
[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "recgraph_benchmark"
harness = false
